<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SplashScreen">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        android:fontFamily="@font/niconne"
        android:text="@string/welcome"
        android:textSize="80sp"
        android:theme="@style/TextStyle"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="118dp"
        android:textColor="@color/secondText"
        android:text="@string/description"
        android:textSize="25sp"
        android:theme="@style/TextStyle"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonStart"
        style="@style/ButtonNext"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="116dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="20dp"
        android:text="@string/start"
        android:textSize="40sp"
        android:theme="@style/Button"
        app:layout_constraintBottom_toTopOf="@+id/textButtonRules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textButtonRules"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="51dp"
        android:text="@string/rules"
        android:textColor="@color/secondTextVariant"
        android:textSize="25sp"
        android:theme="@style/TextStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStart" />

</androidx.constraintlayout.widget.ConstraintLayout>