<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="54dp"
        android:background="@color/secondText"
        app:layout_constraintBottom_toTopOf="@+id/balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:drawableEnd="@drawable/dollar_40"
        android:hint="@string/testSum"
        android:textSize="80sp"
        android:theme="@style/TextStyle"
        app:layout_constraintBottom_toTopOf="@+id/categoryEditArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/secondText"
        app:layout_constraintBottom_toTopOf="@+id/categoryEditArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balance" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/categoryEditArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/corner_category"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4">

        <TextView
            android:id="@+id/nameCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/investingInYourself"
            android:textSize="50sp"
            android:theme="@style/TextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/corner_text"
            android:drawableEnd="@drawable/dollar_24"
            android:paddingHorizontal="10dp"
            android:text="@string/testSum"
            android:textColor="@color/secondText"
            android:textSize="50sp"
            android:theme="@style/TextStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameCategory"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_done"
        style="@style/ButtonNext"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="34dp"
        android:text="@string/done"
        android:textSize="40sp"
        android:theme="@style/Button"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryEditArea" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/corner_numpad"
        android:orientation="vertical"
        android:padding="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_done"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/one"
                style="@style/ButtonNumPad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ButtonNumPad"
                android:text="1" />

            <Button
                android:id="@+id/two"
                style="@style/ButtonNumPad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ButtonNumPad"
                android:text="2" />

            <Button
                android:id="@+id/three"
                style="@style/ButtonNumPad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ButtonNumPad"
                android:text="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                style="@style/ButtonNumPad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ButtonNumPad"
                android:text="4" />

            <Button
                android:id="@+id/five"
                style="@style/ButtonNumPad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ButtonNumPad"
                android:text="5" />

            <Button
                android:id="@+id/six"
                style="@style/ButtonNumPad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ButtonNumPad"
                android:text="6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seven"
                style="@style/ButtonNumPad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ButtonNumPad"
                android:text="7" />

            <Button
                android:id="@+id/eight"
                style="@style/ButtonNumPad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ButtonNumPad"
                android:text="8" />

            <Button
                android:id="@+id/nine"
                style="@style/ButtonNumPad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ButtonNumPad"
                android:text="9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dot"
                style="@style/ButtonNumPad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ButtonNumPad"
                android:text="." />

            <Button
                android:id="@+id/zero"
                style="@style/ButtonNumPad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ButtonNumPad"
                android:text="0" />

            <Button
                android:id="@+id/clear"
                style="@style/ButtonNumPad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ButtonNumPad"
                android:text="⌫" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>